# cpp_oops_best_practices

./: Number.cpp  Number.h  main.cpp
HelloWorld/: CMakeLists.txt
HelloWorld/src/: Log.cpp  Main.cpp
